After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719928 - present dialog shows "null, null" as options
present dialog shows "null, null" as options
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: libgnome-desktop
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-12-05 18:22 UTC by William Jon McCann
Modified: 2014-01-08 19:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
presentation: Don't show "null, null" as options (1.58 KB, patch)
2014-01-08 16:01 UTC, Debarshi Ray
rejected Details | Review
gnome-rr: don't forget to copy display name (881 bytes, patch)
2014-01-08 18:55 UTC, Cosimo Cecchi
committed Details | Review

Description William Jon McCann 2013-12-05 18:22:43 UTC
The "Present" dialog shows "null, null" as options. F20.
Comment 1 Debarshi Ray 2014-01-08 16:01:06 UTC
Created attachment 265715 [details] [review]
presentation: Don't show "null, null" as options

We need to go via the GnomeRROutputInfo route instead of directly grabbing the GnomeRROutput. I do not know if this is a bug in GnomeRR or not, but this is what the Display panel is doing.
Comment 2 William Jon McCann 2014-01-08 16:14:35 UTC
Hmm, any idea why it stopped working?
Comment 3 William Jon McCann 2014-01-08 16:29:45 UTC
Possible regression from bug 705510.
Comment 4 Cosimo Cecchi 2014-01-08 17:25:08 UTC
Review of attachment 265715 [details] [review]:

Patch looks good to me, but indeed it would be great to understand why this is broken with recent libgnome-desktop.
Comment 5 Cosimo Cecchi 2014-01-08 18:54:24 UTC
Comment on attachment 265715 [details] [review]
presentation: Don't show "null, null" as options

This is indeed a gnome-desktop bug. Patch coming.
Comment 6 Cosimo Cecchi 2014-01-08 18:55:37 UTC
Created attachment 265738 [details] [review]
gnome-rr: don't forget to copy display name
Comment 7 William Jon McCann 2014-01-08 19:10:18 UTC
Review of attachment 265738 [details] [review]:

Pretty clearly correct.
Comment 8 Cosimo Cecchi 2014-01-08 19:12:41 UTC
Attachment 265738 [details] pushed as 11f32f1 - gnome-rr: don't forget to copy display name

Pushed to master and gnome-3-10