gnome-rr: don't forget to copy display name

https://bugzilla.gnome.org/show_bug.cgi?id=719928